set freight charges added

--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,21 @@
   <title>Tsml-Admin</title>
   <!-- <base href="https://beas.in/tsml_admin"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="icon" type="image/x-icon" href="https://beas.in/tsml_admin/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://beas.in/tsml_admin/assets/css/bootstrap.min.css">
   <!-- ace.css -->
-  <link rel="stylesheet" type="text/css" href="aseets/css/ace.min.css">
+  <link rel="stylesheet" type="text/css" href="https://beas.in/tsml_admin/assets/css/ace.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <!-- <link rel="stylesheet" type="text/css" href="aseets/css/style.css"> -->
   
 </head>
 <body>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/jquery.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/bootstrap.min.js"></script>
   <!-- include ace.js -->
   <!-- <script src="assets/js/ace.min.js"></script> -->
-  <script src="assets/js/jquery.dataTables.min.js"></script>
-  <script src="assets/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/jquery.dataTables.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/dataTables.bootstrap4.min.js"></script>
   <!-- <link rel="stylesheet" type="text/css" href="aseets/css/dataTables.bootstrap4.min.css"> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
