--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Tsml-Admin</title>
-  <!-- <base href="https://beas.in/tsml_admin"> -->
-   <!-- <base href="http://10.132.37.67/demo"> -->
+
+  <!-- <base href="https://demo-tsml.mjunction.in/mj-admin/"> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
