--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Tsml-Admin</title>
-
+    <!-- <base href="https://beas.in/tsml_admin/"> -->
   <!-- <base href="https://demo-tsml.mjunction.in/mj-admin/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://beas.in/tsml_admin/assets/css/bootstrap.min.css">
   <!-- ace.css -->
-  <link rel="stylesheet" type="text/css" href="assets/css/ace.min.css">
+  <link rel="stylesheet" type="text/css" href="https://beas.in/tsml_admin/assets/css/ace.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   
 </head>
 <body>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/jquery.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/bootstrap.min.js"></script>
 
-  <script src="assets/js/jquery.dataTables.min.js"></script>
-  <script src="assets/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/jquery.dataTables.min.js"></script>
+  <script src="https://beas.in/tsml_admin/assets/js/dataTables.bootstrap4.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
