--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>Tsml-Admin</title>
-    <!-- <base href="https://beas.in/tsml_admin/"> -->
-  <!-- <base href="https://demo-tsml.mjunction.in/mj-admin/"> -->
+  <!-- <base href="https://esales.tatasteelmining.com/tsml_admin/"> -->
+  <!-- <base href="https://beas.in/tsml_admin/"> -->
+  <!-- <base href="https://demo-tsml.mjunction.in/tsml_admin/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="https://beas.in/tsml_admin/assets/css/bootstrap.min.css">
-  <!-- ace.css -->
-  <link rel="stylesheet" type="text/css" href="https://beas.in/tsml_admin/assets/css/ace.min.css">
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css" type="text/css">
   
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
 </head>
 <body>
-  <script src="https://beas.in/tsml_admin/assets/js/jquery.min.js"></script>
-  <script src="https://beas.in/tsml_admin/assets/js/bootstrap.min.js"></script>
-
-  <script src="https://beas.in/tsml_admin/assets/js/jquery.dataTables.min.js"></script>
-  <script src="https://beas.in/tsml_admin/assets/js/dataTables.bootstrap4.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
 
   <app-root></app-root>
+ 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
